--- a/cleaning.Rmd
+++ b/cleaning.Rmd
@@ -13,6 +13,42 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 
 
-lat_lon = read.csv("lag_lng_allbaseline.csv")
+lat_lon <- read.csv("lag_lng_allbaseline.csv")
+
+head(lat_lon$latitude[1])
+
+x = lat_lon$latitude[1]
+
+#loop over all the different of a_hhid and for each one, filter by "a_hhid = this" 
+
+#and then pull out lat and longitude 
+#turn into matrix 
+```
+
+```{r}
+
+id_vec <- unique(lat_lon$a_hhid) #make a list of all the values in a_hhid
+
+poly_list <- vector("list", length(id_vec))
+#building a table
+
+  
+df <- lat_lon %>% 
+    filter(a_hhid == 10010013) %>% 
+    select(longitude, latitude) %>% 
+    as.matrix
+
+for(i in seq_along(unique(lat_lon$a_hhid))){
+  #filter the df 
+  id = id_vec[i]
+  df <- lat_lon %>% 
+    filter(a_hhid == id) %>% 
+    select(longitude, latitude) %>% 
+    as.matrix
+  #get the coodrinates
+  #create the polygon, and add attributes
+  poly <- st_sf(data.frame(a_hhid = id, st_sfc(st_polygon(list(as.matrix(df)))),crs = 4326))
+  
+}
 ```
 
