poly does not run due to issues with data

--- a/cleaning.Rmd
+++ b/cleaning.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(tidyverse)
-
+library(sf)
 
 lat_lon <- read.csv("lag_lng_allbaseline.csv")
 
@@ -33,22 +33,23 @@ poly_list <- vector("list", length(id_vec))
 #building a table
 
   
-df <- lat_lon %>% 
-    filter(a_hhid == 10010013) %>% 
-    select(longitude, latitude) %>% 
-    as.matrix
+#df <- lat_lon %>% 
+   #filter(a_hhid == 10010013) %>% 
+    #select(longitude, latitude) %>% 
+    #as.matrix
 
 for(i in seq_along(unique(lat_lon$a_hhid))){
   #filter the df 
   id = id_vec[i]
-  df <- lat_lon %>% 
+  df_test <- lat_lon %>% 
     filter(a_hhid == id) %>% 
     select(longitude, latitude) %>% 
     as.matrix
   #get the coodrinates
   #create the polygon, and add attributes
-  poly <- st_sf(data.frame(a_hhid = id, st_sfc(st_polygon(list(as.matrix(df)))),crs = 4326))
-  
+  poly <- st_sf(data.frame(a_hhid = id, st_sfc(st_polygon(list(as.matrix(df_test)))),crs = 4326))
 }
 ```
+
+
 
