--- a/cleaning.Rmd
+++ b/cleaning.Rmd
@@ -15,6 +15,8 @@ library(sf)
 library(stringr)
 library(rgdal)
 library(maptools)
+library(mapview)
+library(here)
 
 lat_lon <- read.csv("lag_lng_allbaseline.csv")
 
@@ -28,7 +30,7 @@ lat_lon_id <- lat_lon %>%
   mutate(unique_id=paste(substr(plot_id, 2, 2), resp_id))
   
 
-lat_lon_id$unique_id <- gsub(" ", "", lat_lon_id$unique_id, fixed = TRUE)
+lat_lon_id$unique_id <- gsub(" ", "", lat_lon_id$unique_id, fixed = TRUE) #this gets rid of the space, take space and sub it with nospace
   #unite("unique_id", plot_id, a_hhid, remove = FALSE)
 
 
@@ -36,7 +38,9 @@ lat_lon_id$unique_id <- gsub(" ", "", lat_lon_id$unique_id, fixed = TRUE)
 
 ```
 
-Data Cleaning
+##Part 1: Create and Export the Polygons
+
+###Data Cleaning
 ```{r}
 #find any values with Na
 
@@ -46,28 +50,28 @@ check_na <- lat_lon_id %>%
   filter(is.na(a_hhid) | is.na(longitude))
 
 #remove all NAs
-clean <- lat_lon[complete.cases(lat_lon), ]
+#clean <- lat_lon[complete.cases(lat_lon), ]
 
 clean_id <-lat_lon_id[complete.cases(lat_lon_id), ]
 ```
 
 
 
-Creating vectors
-##-unique id, resp Id
+###Creating vectors
+-unique id, resp Id
 
 ```{r}
 #unique id 
 
-id_vec <- unique(clean_id$unique_id) #make a list of all the values in unique_id column, can this be numeric?
+id_vec <- unique(clean_id$unique_id) #make a list of all the values in unique_id column, use this one for loop
 
-#try with resp id
+#try with resp id - more for data exploration
 
-id_vec_resp <- unique(clean$resp_id)
+id_vec_resp <- unique(clean_id$resp_id)
 
-#try with a_hhid
+#try with a_hhid -  more for data exploration
 
-id_vec_ah <-unique(clean$a_hhid)
+id_vec_ah <-unique(clean_id$a_hhid)
 
 
 #old - from before it was clean, just to compare which are missing
@@ -80,13 +84,12 @@ id_vec_resp_old <- unique(lat_lon$resp_id)
 
 
 
-Data Exploration
-###1 How many loops are we dealing with?
-###2 What are the first and last values?
+###Data Exploration
+1. How many loops are we dealing with?
+2. What are the first and last values?
 
 
 ```{r}
-#aparently, resp_id is unique to polygons
 
 #1.How many unique resp_ids?
 length(id_vec_resp)
@@ -111,7 +114,7 @@ length(id_vec_old)
 
 
 
-Create subsets for testing
+###Create subsets for testing
 ```{r}
 #with unique Id
 #for testing
@@ -129,8 +132,8 @@ df_resp <- lat_lon_id %>%
 ```
 
 
-Filtered sets post-error - *you need to run this to make sure the loop is operating on the clean data set*
-###Removed: 1110600681, 1122201051, 1220301321, 1118200131
+###Filtered sets post-error - *you need to run this to make sure the loop is operating on the clean data set*
+Removed: 1110600681, 1122201051, 1220301321, 1118200131
 ```{r}
 #second
 clean_id_2 <- clean_id %>% 
@@ -159,9 +162,7 @@ id_vec_4 <- unique(clean_id_4$unique_id)
 
 
 
-
-
-Code to add another point for closure - if needed
+Code to add another point for closure - if needed, not necessary to run the loop
 ```{r}
 #making matrices and testing for closure
 
@@ -195,7 +196,7 @@ plot(line_sf_closed)
 
 ```
 
-Loop to make polygons
+Loop to make polygons - you must use 'clean_id_4' for it to run properly 
 ```{r}
 for(i in seq_along(unique(clean_id_4$unique_id))){
   #filter the df 
@@ -267,26 +268,26 @@ info_sample <- clean_sample[-c(4)]
 
 #create a data set with the random sample removed, per Kelsey's request
 
-#use `anti_join` from the tidverse to take out the 200 sample, just need to convert sf objects to dataframes 
+#use `anti_join` from the tidverse to take out the 200 sample
 
-clean_done_df <- as.data.frame(clean_done)
+#clean_done_df <- as.data.frame(clean_done)
 
-clean_sample_df <- as.data.frame(clean_sample)
+#clean_sample_df <- as.data.frame(clean_sample)
 
-all_minus_sample <- anti_join(clean_done_df, clean_sample_df, by = "unique_id")
+all_minus_sample <- anti_join(clean_done, clean_sample, by = "unique_id")
 
 #convert back to spatial object
-all_minus_sample_sf <- st_as_sf(x = all_minus_sample, sf_column_name = "geometry") #this didn't work 
+#all_minus_sample_sf <- st_as_sf(x = all_minus_sample, sf_column_name = "geometry") #this didn't work 
 
 ```
 
 
 
-Writing out shapefiles and csv  
+Writing out shapefiles and csv  (don't run if they already exist)
 ```{r}
 st_write(poly_sf, "test_noinfo.shp")
 
-st_write(clean_done, "test_all.shp")
+st_write(clean_done, "test_all.shp") #this has all the info, is the finalized version
 
 st_write(clean_sample, "random_sample.shp")
 
@@ -314,9 +315,91 @@ writeOGR(clean_sample, dsn="random_sample.kml", layer = "sample_plots", driver =
 
 ```
 
+##Part 2: Add Survey Data
+
+
+###Read in the dataset
+```{r}
+
+survey_all <- read_csv(here("survey_data", "monitoring_forsensor.csv"))
+
+summary(survey_all)
+
+avg_plot_p_respondent <- 3224 / 148
+
+```
+
+
+Note - there are fewer observations than polygons, which makes sense. From these numbers, farmer have on average 21.7 plots 
 
 
 
+
+###Go exploring 
+I don' think many of these variables will be needed for visualization, so make a subset to explore with
+
+```{r}
+
+survey_less <- survey_all %>% 
+  select(resp_id,a_hhid,treatment,plot,plot_id,plot_count,village,district,burnt,harvested,monitoring_date)
+
+length(unique(survey_less$resp_id))
+
+length(unique(survey_less$a_hhid))
+
+treatment_hist <- ggplot(survey_less, aes(x = treatment))+
+    geom_bar()
+
+plotcount_hist <- ggplot(survey_less, aes(x = plot_count)) + 
+  geom_histogram()
+
+plotcount_hist
+
+c
+
+```
+
+**Somethings I want to know**
+-can I group by a_hhid and count the number of plots?
+-how many a_hhid - does that match?
+
+Number of resp_id = 148
+Number of a_hhid = 148
+
+**Questions**
+
+Looking at burnt, all of these respondents said no? Are none of the control groups here? 
+
+
+###Join data
+use inner join and resp_id to join 
+
+```{r}
+
+
+length(unique(clean_done$resp_id))
+
+clean_poly_everything <- inner_join(survey_less,clean_done, by = "resp_id")
+
+```
+
+###Look at results (small subsets)
+
+```{r}
+
+
+
+mapview(clean_poly_ablu, ncol()) #so somewhere we have lost our spatial data
+
+
+clean_poly_everything <- st_as_sf(x = clean_poly_everything, sf_column_name = "geometry") 
+
+clean_poly_ablu <- clean_poly_everything %>% 
+  filter(village == "Ablu")
+
+mapview(clean_poly_ablu) # yay    
+
+```
 
 
 
